# yac-nc1

./: .gitmodules  .readthedocs.yaml  README.md
docs/documentation/: Doxyfile  conf.py
hardware/de10-shield/: de10-shield-cache.lib  de10-shield.kicad_pcb  de10-shield.kicad_pcb-bak  de10-shield.net  de10-shield.pro  de10-shield.sch  de10-shield.sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
hardware/de10-shield/de10-shield/: de10-shield-B_Cu.gbr  de10-shield-B_Mask.gbr  de10-shield-B_Paste.gbr  de10-shield-B_SilkS.gbr  de10-shield-Edge_Cuts.gbr  de10-shield-F_Cu.gbr  de10-shield-F_Mask.gbr  de10-shield-F_Paste.gbr  de10-shield-F_SilkS.gbr  de10-shield-NPTH.drl  de10-shield-PTH.drl
software/: .gitignore
software/de10-nano-soc/: DE10_NANO_SoC_GHRD.qsf  DE10_NANO_SoC_GHRD.v  soc_system.qsys
software/de10-nano-soc/output_files/: DE10_NANO_SoC_GHRD.rbf
software/src/cnc/: CMakeLists.txt  package.xml
software/src/cnc/cmake/: findros.cmake
software/src/cnc/include/cnc/: cnc.hpp  hps_0.h
software/src/cnc/python/: calibrate_camera.py
software/src/cnc/src/: cnc.cpp  test_stepper.cpp
software/src/cnc_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
software/src/cnc_gui/calibration/: ID_0_size_20.eps  default.xml  id0.eps  id1.eps  id2.eps  imx258_high_resolution.xml  imx258_low_resolution.xml  size_40.eps
software/src/cnc_gui/calibration/imx258_high_resolution/: image_list.xml
software/src/cnc_gui/calibration/imx258_low_resolution/: image_list.xml
software/src/cnc_gui/include/cnc_gui/: .atom-beautify.brain_dice_config.hpp  brain_dice_config.hpp  camera.hpp  cnc_gui.hpp  joystick.hpp
software/src/cnc_gui/runs/haribald/: config.yaml
software/src/cnc_gui/runs/haribald/0/: 0.yaml
software/src/cnc_gui/runs/haribald/1/: 1.yaml
software/src/cnc_gui/src/: brain_dice_config.cpp  camera.cpp  camera_calibration.cpp  camera_viewer.cpp  cnc_gui.cpp  cnc_gui.ui  joystick.cpp  test_braindiceconfig.cpp  test_joystick.cpp  test_visp_tracker.cpp
